feat(parser): add RootCauseExtractor with multi-language root cause detection and tests